project/stage/parse_tests/tests/reject/bad_statements/bad_expr_w_parentheses/in_if_else.ul
void m() {
    if(expr) { 
    } else ((expr) {}
}
